fix tooltip child overflowing

--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -37,7 +37,3 @@
         padding: $spacing-3;
     }
 }
-
-.title {
-    max-width: 70%;
-}
