--- a/src/components/typography/Typography.module.scss
+++ b/src/components/typography/Typography.module.scss
@@ -5,9 +5,9 @@
     text-wrap: balance;
 
     &--line-clamp {
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
         overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     &--h1,
